--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
             <meta http-equiv="X-UA-Compatible" content="IE=edge">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <title>Testando o github</title>
+            <link rel="stylesheet" href="./estilo.css">
         </head>
         <body>
             <h2>ola</h2>
             <h2>alterações feitas dentro do html</h2>
-            
+
         </body>
         </html>
